...
            android:layout_margin="24dp"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="24dp">

            <ImageView
                android:id="@+id/ivRegisterUserImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/profile_ic"
                android:layout_marginBottom="8dp" />

            <TextView
...
                android:text="Click image to choose from gallery"
                android:textAlignment="center"
                android:textSize="12sp"
                android:layout_marginBottom="24dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etLayoutFullNameRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_full_name"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etFullNameRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etLayoutAddressRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter address"
                android:layout_marginTop="12dp"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etAddressRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPostalAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etLayoutPhoneRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter phone number"
                android:layout_marginTop="12dp"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPhoneRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etLayoutEmailAddressRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_email_address"
                android:layout_marginTop="12dp"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmailRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etLayoutPasswordRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_password"
                android:layout_marginTop="12dp"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPasswordRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <RadioGroup
...
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                android:gravity="center"
                android:weightSum="1">

                <RadioButton
                    android:id="@+id/typeTeacher"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/teacher_account" />

                <RadioButton
                    android:id="@+id/typeStudent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/student_account" />
            </RadioGroup>

            <Button
                android:id="@+id/btnRegisterSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/register" />

            <TextView
                android:id="@+id/btnBackToSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:padding="8dp"
                android:text="@string/already_have_an_account_sign_in_now"
                android:textAlignment="center"
...
