...
        android:layout_height="40dp"
        android:layout_marginStart="12dp"
        android:src="@drawable/profile_ic"
        android:scaleType="centerCrop"
        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Full"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/titleMorim"
        app:layout_constraintBottom_toBottomOf="@id/titleMorim"
         />
    />

    <TextView
        android:id="@+id/titleMorim"
...
