...
            android:backgroundTint="#6200EE"
            android:textColor="#FFFFFF"
            android:padding="12dp"
            app:cornerRadius="24dp" />

        <TextView
            android:id="@+id/btnToRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="8dp"
            android:text="Don't have an account?\ncreate one now!"
            android:textAlignment="center"
...
